--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
     <title> Dominic DeLong About Me </title>
+        <link rel="stylesheet" href="main.css">
     </head>
     
   <body>
