--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 <body>
   <h1 id="name">Dominic DeLong</h1>
     <p id="minibio">Designer // Runner //  Raver</p>
-    <div class="container">
-    <img src="assets/profilepic.jpg" alt="dom's profile image">
+    
+    <img src="assets/profilepic.jpg" class="biopic" alt="dom's profile image">
+        <div class="container">
     <p class="bio">
       Hi I'm Dominic! I am 20 years old and a junior at Eastern Washington University studing Visual Communication and Design. I know this is only the beginning of my web design journey, but I hope that I can do front end for websites when I leave college. Not to mention being the Sr. Designer for a firm/company on the west coast. I still have a long journey ahead of me, but I can't wait to see my skills grow as a designer. Outisde my career goals I would love to travel the world and go see everything the world has to offer.  Along the way making stops at all of the music festivals around the world.
     </p>
    <h2 id="book">Underwater Puppies</h2> 
-        <a href="https://www.amazon.com/Underwater-Puppies-Seth-Casteel/dp/0316254894/ref=sr_1_1?ie=UTF8&qid=1476046120&sr=8-1&keywords=puppies+underwater"><img src="assets/puppies.jpg" alt="Underwater Puppies"></a>
+        <a href="https://www.amazon.com/Underwater-Puppies-Seth-Casteel/dp/0316254894/ref=sr_1_1?ie=UTF8&qid=1476046120&sr=8-1&keywords=puppies+underwater"><img src="assets/puppies.jpg" class="puppie" alt="Underwater Puppies"></a>
     <p class="bio">
         I do not read often, but when I do you know it better be something amazing and worth my time.  This is why I chose Underwater Puppies, a book that makes people smile all over the world. It is a book dedicated to pictures of dogs that are underwater. At first you may think this book is a joke, but is one of the greatest books ever made.</p>
     <h3 class="food">Teriyaki Chicken</h3>
